<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/login_bg_color"
        android:gravity="center"
        android:padding="10dp"
        tools:context="com.binarycase.saudiassociation.loginRegister.ui.activity.CompleteAccountCreatationActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/edit_text_border"
            >


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditText1StyleRed"
                android:hint="@string/chech_code"
                android:textAlignment="center"
                android:padding="10dp"
                android:lines="1"
                android:textSize="@dimen/_12ssp"
                android:inputType="text"
                android:textStyle="bold"
                android:id="@+id/confirm_code_txt"
                android:layout_marginTop="20dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/sign_up_button"
                android:id="@+id/confirm_code_btn"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/complete_create_new_account"
                android:onClick="confirmCreateAccount"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sms_text"
                android:textSize="@dimen/_10ssp"
                android:onClick="sendCode"
                android:layout_gravity="center"
                android:text="@string/sms_code"
                android:textColor="@color/textview_text_color"
                />

        </LinearLayout>
    </LinearLayout>
</layout>