<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/login_bg_color"
        android:gravity="center"
        android:layoutDirection="rtl"
        android:padding="@dimen/_15sdp"
        tools:context="com.binarycase.saudiassociation.loginRegister.ui.activity.ForgetPasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp"
            android:background="@drawable/edit_text_border"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="10"
                >

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:id="@+id/phone_number"
                    android:textAlignment="center"
                    style="@style/EditText1StyleRed"
                    android:hint="@string/phone_number"
                    android:lines="1"
                    android:maxLength="10"
                    android:inputType="phone"
                    android:textSize="@dimen/_12ssp"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/EditText1StyleRed"
                    android:hint="@string/_966"
                    android:id="@+id/country_code"
                    android:enabled="false"
                    android:lines="1"
                    android:maxLength="5"
                    android:textSize="@dimen/_12ssp"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:layout_weight="3"
                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:background="@drawable/sign_in_button"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/btn_ret_password"
                android:layout_marginBottom="10dp"
                android:text="@string/rest_password"
                android:textColor="#fff"
                android:textStyle="bold"
                android:onClick="CheckCode"
                android:textSize="@dimen/_12ssp"
                />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:id="@+id/message"
                android:text="@string/will_send_u_code_by_mail"
                android:textColor="@color/textview_text_color" />

        </LinearLayout>
    </LinearLayout>
</layout>